[package]
name = "file_transcoding_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniz_oxide = "0.6.1"
lazy_static = "1.4.0"
pixels = "0.8.0"
winit = "0.26.0"
winit_input_helper = "0.11.0"

[dev-dependencies]
